--- a/Kaiserreich Korean Translation/localisation/KR_Countries_Cosmetic_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Countries_Cosmetic_l_english.yml
@@ -968,36 +968,36 @@ KAZ_caf_totalist:0 "중앙아시아 연방"
 KAZ_caf_totalist_ADJ:0 "중앙아시아"
 KAZ_caf_totalist_DEF:0 "중앙아시아 연방"
 
-AUP_GER_authoritarian_democrat:0 "독일 제국"
-AUP_GER_authoritarian_democrat_ADJ:0 "독일"
-AUP_GER_authoritarian_democrat_DEF:0 "독일 제국"
-AUP_GER_market_liberal:0 "독일 제국"
-AUP_GER_market_liberal_ADJ:0 "독일"
-AUP_GER_market_liberal_DEF:0 "독일 제국"
-AUP_GER_national_populist:0 "독일 제국"
-AUP_GER_national_populist_ADJ:0 "독일"
-AUP_GER_national_populist_DEF:0 "독일 제국"
-AUP_GER_paternal_autocrat:0 "독일 제국"
-AUP_GER_paternal_autocrat_ADJ:0 "독일"
-AUP_GER_paternal_autocrat_DEF:0 "독일 제국"
-AUP_GER_radical_socialist:0 "독일 제국"
-AUP_GER_radical_socialist_ADJ:0 "독일"
-AUP_GER_radical_socialist_DEF:0 "독일 제국"
-AUP_GER_social_conservative:0 "독일 제국"
-AUP_GER_social_conservative_ADJ:0 "독일"
-AUP_GER_social_conservative_DEF:0 "독일 제국"
-AUP_GER_social_democrat:0 "독일 제국"
-AUP_GER_social_democrat_ADJ:0 "독일"
-AUP_GER_social_democrat_DEF:0 "독일 제국"
-AUP_GER_social_liberal:0 "독일 제국"
-AUP_GER_social_liberal_ADJ:0 "독일"
-AUP_GER_social_liberal_DEF:0 "독일 제국"
-AUP_GER_syndicalist:0 "독일 제국"
-AUP_GER_syndicalist_ADJ:0 "독일"
-AUP_GER_syndicalist_DEF:0 "독일 제국"
-AUP_GER_totalist:0 "독일 제국"
-AUP_GER_totalist_ADJ:0 "독일"
-AUP_GER_totalist_DEF:0 "독일 제국"
+AUS_GER_authoritarian_democrat:0 "독일 제국"
+AUS_GER_authoritarian_democrat_ADJ:0 "독일"
+AUS_GER_authoritarian_democrat_DEF:0 "독일 제국"
+AUS_GER_market_liberal:0 "독일 제국"
+AUS_GER_market_liberal_ADJ:0 "독일"
+AUS_GER_market_liberal_DEF:0 "독일 제국"
+AUS_GER_national_populist:0 "독일 제국"
+AUS_GER_national_populist_ADJ:0 "독일"
+AUS_GER_national_populist_DEF:0 "독일 제국"
+AUS_GER_paternal_autocrat:0 "독일 제국"
+AUS_GER_paternal_autocrat_ADJ:0 "독일"
+AUS_GER_paternal_autocrat_DEF:0 "독일 제국"
+AUS_GER_radical_socialist:0 "독일 제국"
+AUS_GER_radical_socialist_ADJ:0 "독일"
+AUS_GER_radical_socialist_DEF:0 "독일 제국"
+AUS_GER_social_conservative:0 "독일 제국"
+AUS_GER_social_conservative_ADJ:0 "독일"
+AUS_GER_social_conservative_DEF:0 "독일 제국"
+AUS_GER_social_democrat:0 "독일 제국"
+AUS_GER_social_democrat_ADJ:0 "독일"
+AUS_GER_social_democrat_DEF:0 "독일 제국"
+AUS_GER_social_liberal:0 "독일 제국"
+AUS_GER_social_liberal_ADJ:0 "독일"
+AUS_GER_social_liberal_DEF:0 "독일 제국"
+AUS_GER_syndicalist:0 "독일 제국"
+AUS_GER_syndicalist_ADJ:0 "독일"
+AUS_GER_syndicalist_DEF:0 "독일 제국"
+AUS_GER_totalist:0 "독일 제국"
+AUS_GER_totalist_ADJ:0 "독일"
+AUS_GER_totalist_DEF:0 "독일 제국"
 
 
 CZE_habsburg_totalist:0 "보헤미아 사회주의 공화국"
@@ -2241,34 +2241,34 @@ PHW_totalist:0 "필리핀 사회주의 공화국"
 PHW_totalist_ADJ:0 "필리핀"
 PHW_totalist_DEF:0 "필리핀 사회주의 공화국"
 
-UKR_communist_authoritarian_democrat:0 "우크라이나 사회주의 공화국"
-UKR_communist_authoritarian_democrat_ADJ:0 "우크라이나"
-UKR_communist_authoritarian_democrat_DEF:0 "우크라이나 사회주의 공화국"
-UKR_communist_market_liberal:0 "우크라이나 사회주의 공화국"
-UKR_communist_market_liberal_ADJ:0 "우크라이나"
-UKR_communist_market_liberal_DEF:0 "우크라이나 사회주의 공화국"
 UKR_communist_national_populist:0 "우크라이나 사회주의 공화국"
 UKR_communist_national_populist_ADJ:0 "우크라이나"
 UKR_communist_national_populist_DEF:0 "우크라이나 사회주의 공화국"
-UKR_communist_paternal_autocrat:0 "우크라이나 사회주의 공화국"
+UKR_communist_paternal_autocrat:0 "우크라이나 왕국"
 UKR_communist_paternal_autocrat_ADJ:0 "우크라이나"
-UKR_communist_paternal_autocrat_DEF:0 "우크라이나 사회주의 공화국"
-UKR_communist_radical_socialist:0 "우크라이나 사회주의 공화국"
-UKR_communist_radical_socialist_ADJ:0 "우크라이나"
-UKR_communist_radical_socialist_DEF:0 "우크라이나 사회주의 공화국"
+UKR_communist_paternal_autocrat_DEF:0 "우크라이나 왕국"
+UKR_communist_authoritarian_democrat:0 "우크라이나 왕국"
+UKR_communist_authoritarian_democrat_ADJ:0 "우크라이나"
+UKR_communist_authoritarian_democrat_DEF:0 "우크라이나 왕국"
 UKR_communist_social_conservative:0 "우크라이나 사회주의 공화국"
 UKR_communist_social_conservative_ADJ:0 "우크라이나"
 UKR_communist_social_conservative_DEF:0 "우크라이나 사회주의 공화국"
-UKR_communist_social_democrat:0 "우크라이나 사회주의 공화국"
-UKR_communist_social_democrat_ADJ:0 "우크라이나"
-UKR_communist_social_democrat_DEF:0 "우크라이나 사회주의 공화국"
+UKR_communist_market_liberal:0 "우크라이나 사회주의 공화국"
+UKR_communist_market_liberal_ADJ:0 "우크라이나"
+UKR_communist_market_liberal_DEF:0 "우크라이나 사회주의 공화국"
 UKR_communist_social_liberal:0 "우크라이나 사회주의 공화국"
 UKR_communist_social_liberal_ADJ:0 "우크라이나"
 UKR_communist_social_liberal_DEF:0 "우크라이나 사회주의 공화국"
-UKR_communist_syndicalist:0 "우크라이나 사회주의 공화국"
+UKR_communist_social_democrat:0 "우크라이나 사회주의 공화국"
+UKR_communist_social_democrat_ADJ:0 "우크라이나"
+UKR_communist_social_democrat_DEF:0 "우크라이나 사회주의 공화국"
+UKR_communist_radical_socialist:0 "Socialist 우크라이나 사회주의 공화국"
+UKR_communist_radical_socialist_ADJ:0 "우크라이나"
+UKR_communist_radical_socialist_DEF:0 "우크라이나 사회주의 공화국"
+UKR_communist_syndicalist:0 "Socialist 우크라이나 사회주의 공화국"
 UKR_communist_syndicalist_ADJ:0 "우크라이나"
 UKR_communist_syndicalist_DEF:0 "우크라이나 사회주의 공화국"
-UKR_communist_totalist:0 "우크라이나 사회주의 공화국"
+UKR_communist_totalist:0 "Socialist 우크라이나 사회주의 공화국"
 UKR_communist_totalist_ADJ:0 "우크라이나"
 UKR_communist_totalist_DEF:0 "우크라이나 사회주의 공화국"
 
@@ -2690,9 +2690,6 @@ LBA_ITA_subject:0 "이탈리아령 북아프리카"
 LBA_ITA_subject_DEF:0 "이탈리아령 북아프리카"
 LBA_ITA_subject_ADJ:0 "리비아"
 
-TUN_subject:0 "$OVERLORDADJ$령 튀니지"
-TUN_subject_DEF:0 "$OVERLORDADJ$령 튀니지"
-
 MYS_PRF_subject:0 "마이소르 주"
 MYS_PRF_subject_DEF:0 "마이소르 주"
 MYS_PRF_subject_ADJ:0 "마이소르"
@@ -2789,21 +2786,21 @@ SIE_GER_subject:0 "시에라리온 자유주"
 SIE_GER_subject_ADJ:0 "시에라리온"
 SIE_GER_subject_DEF:0 "시에라리온 자유주"
 
-CZE_czechoslavakia_authoritarian_democrat:0 "체코슬로바키아 왕국"
+CZE_czechoslavakia_authoritarian_democrat:0 "체코슬로바키아"
 CZE_czechoslavakia_authoritarian_democrat_ADJ:0 "체코슬로바키아"
-CZE_czechoslavakia_authoritarian_democrat_DEF:0 "체코슬로바키아 왕국"
+CZE_czechoslavakia_authoritarian_democrat_DEF:0 "체코슬로바키아"
 CZE_czechoslavakia_market_liberal:0 "체코슬로바키아"
 CZE_czechoslavakia_market_liberal_ADJ:0 "체코슬로바키아"
 CZE_czechoslavakia_market_liberal_DEF:0 "체코슬로바키아"
 CZE_czechoslavakia_national_populist:0 "체코슬로바키아"
 CZE_czechoslavakia_national_populist_ADJ:0 "체코슬로바키아"
 CZE_czechoslavakia_national_populist_DEF:0 "체코슬로바키아"
-CZE_czechoslavakia_paternal_autocrat:0 "체코슬로바키아 왕국"
+CZE_czechoslavakia_paternal_autocrat:0 "체코슬로바키아"
 CZE_czechoslavakia_paternal_autocrat_ADJ:0 "체코슬로바키아"
-CZE_czechoslavakia_paternal_autocrat_DEF:0 "체코슬로바키아 왕국"
-CZE_czechoslavakia_radical_socialist:0 "체코슬로바키아 연방"
+CZE_czechoslavakia_paternal_autocrat_DEF:0 "체코슬로바키아"
+CZE_czechoslavakia_radical_socialist:0 "체코슬로바키아"
 CZE_czechoslavakia_radical_socialist_ADJ:0 "체코슬로바키아"
-CZE_czechoslavakia_radical_socialist_DEF:0 "체코슬로바키아 연방"
+CZE_czechoslavakia_radical_socialist_DEF:0 "체코슬로바키아"
 CZE_czechoslavakia_social_conservative:0 "체코슬로바키아"
 CZE_czechoslavakia_social_conservative_ADJ:0 "체코슬로바키아"
 CZE_czechoslavakia_social_conservative_DEF:0 "체코슬로바키아"
@@ -2813,12 +2810,12 @@ CZE_czechoslavakia_social_democrat_DEF:0 "체코슬로바키아"
 CZE_czechoslavakia_social_liberal:0 "체코슬로바키아"
 CZE_czechoslavakia_social_liberal_ADJ:0 "체코슬로바키아"
 CZE_czechoslavakia_social_liberal_DEF:0 "체코슬로바키아"
-CZE_czechoslavakia_syndicalist:0 "체코슬로바키아 연방"
+CZE_czechoslavakia_syndicalist:0 "체코슬로바키아"
 CZE_czechoslavakia_syndicalist_ADJ:0 "체코슬로바키아"
-CZE_czechoslavakia_syndicalist_DEF:0 "체코슬로바키아 연방"
-CZE_czechoslavakia_totalist:0 "체코슬로바키아 연방"
+CZE_czechoslavakia_syndicalist_DEF:0 "체코슬로바키아"
+CZE_czechoslavakia_totalist:0 "체코슬로바키아"
 CZE_czechoslavakia_totalist_ADJ:0 "체코슬로바키아"
-CZE_czechoslavakia_totalist_DEF:0 "체코슬로바키아 연방"
+CZE_czechoslavakia_totalist_DEF:0 "체코슬로바키아"
 
 CNT_FAI_authoritarian_democrat:0 "전국노동자연합"
 CNT_FAI_authoritarian_democrat_ADJ:0 "아나키-생디칼리즘"
@@ -3034,61 +3031,61 @@ BRA_ARG_totalist:0 "브라질 코뮌 연합"
 BRA_ARG_totalist_ADJ:0 "브라질"
 BRA_ARG_totalist_DEF:0 "브라질 코뮌 연합"
 
-AUP_CIS_market_liberal:0 "시스라이타니아 오스트리아"
-AUP_CIS_market_liberal_ADJ:0 "오스트리아"
-AUP_CIS_market_liberal_DEF:0 "시스라이타니아 오스트리아"
-AUP_CIS_national_populist:0 "시스라이타니아 오스트리아"
-AUP_CIS_national_populist_ADJ:0 "오스트리아"
-AUP_CIS_national_populist_DEF:0 "시스라이타니아 오스트리아"
-AUP_CIS_paternal_autocrat:0 "시스라이타니아 오스트리아"
-AUP_CIS_paternal_autocrat_ADJ:0 "오스트리아"
-AUP_CIS_paternal_autocrat_DEF:0 "시스라이타니아 오스트리아"
-AUP_CIS_radical_socialist:0 "시스라이타니아 오스트리아"
-AUP_CIS_radical_socialist_ADJ:0 "오스트리아"
-AUP_CIS_radical_socialist_DEF:0 "시스라이타니아 오스트리아"
-AUP_CIS_social_conservative:0 "시스라이타니아 오스트리아"
-AUP_CIS_social_conservative_ADJ:0 "오스트리아"
-AUP_CIS_social_conservative_DEF:0 "시스라이타니아 오스트리아"
-AUP_CIS_social_democrat:0 "시스라이타니아 오스트리아"
-AUP_CIS_social_democrat_ADJ:0 "오스트리아"
-AUP_CIS_social_democrat_DEF:0 "시스라이타니아 오스트리아"
-AUP_CIS_social_liberal:0 "시스라이타니아 오스트리아"
-AUP_CIS_social_liberal_ADJ:0 "오스트리아"
-AUP_CIS_social_liberal_DEF:0 "시스라이타니아 오스트리아"
-AUP_CIS_authoritarian_democrat:0 "시스라이타니아 오스트리아"
-AUP_CIS_authoritarian_democrat_ADJ:0 "오스트리아"
-AUP_CIS_authoritarian_democrat_DEF:0 "시스라이타니아 오스트리아"
-AUP_CIS_totalist:0 "시스라이타니아 오스트리아"
-AUP_CIS_totalist_ADJ:0 "오스트리아"
-AUP_CIS_totalist_DEF:0 "시스라이타니아 오스트리아"
+AUS_CIS_market_liberal:0 "시스라이타니아 오스트리아"
+AUS_CIS_market_liberal_ADJ:0 "오스트리아"
+AUS_CIS_market_liberal_DEF:0 "시스라이타니아 오스트리아"
+AUS_CIS_national_populist:0 "시스라이타니아 오스트리아"
+AUS_CIS_national_populist_ADJ:0 "오스트리아"
+AUS_CIS_national_populist_DEF:0 "시스라이타니아 오스트리아"
+AUS_CIS_paternal_autocrat:0 "시스라이타니아 오스트리아"
+AUS_CIS_paternal_autocrat_ADJ:0 "오스트리아"
+AUS_CIS_paternal_autocrat_DEF:0 "시스라이타니아 오스트리아"
+AUS_CIS_radical_socialist:0 "시스라이타니아 오스트리아"
+AUS_CIS_radical_socialist_ADJ:0 "오스트리아"
+AUS_CIS_radical_socialist_DEF:0 "시스라이타니아 오스트리아"
+AUS_CIS_social_conservative:0 "시스라이타니아 오스트리아"
+AUS_CIS_social_conservative_ADJ:0 "오스트리아"
+AUS_CIS_social_conservative_DEF:0 "시스라이타니아 오스트리아"
+AUS_CIS_social_democrat:0 "시스라이타니아 오스트리아"
+AUS_CIS_social_democrat_ADJ:0 "오스트리아"
+AUS_CIS_social_democrat_DEF:0 "시스라이타니아 오스트리아"
+AUS_CIS_social_liberal:0 "시스라이타니아 오스트리아"
+AUS_CIS_social_liberal_ADJ:0 "오스트리아"
+AUS_CIS_social_liberal_DEF:0 "시스라이타니아 오스트리아"
+AUS_CIS_authoritarian_democrat:0 "시스라이타니아 오스트리아"
+AUS_CIS_authoritarian_democrat_ADJ:0 "오스트리아"
+AUS_CIS_authoritarian_democrat_DEF:0 "시스라이타니아 오스트리아"
+AUS_CIS_totalist:0 "시스라이타니아 오스트리아"
+AUS_CIS_totalist_ADJ:0 "오스트리아"
+AUS_CIS_totalist_DEF:0 "시스라이타니아 오스트리아"
 
-AUP_united_states_market_liberal:0 "대 오스트리아 합중국"
-AUP_united_states_market_liberal_ADJ:0 "오스트리아"
-AUP_united_states_market_liberal_DEF:0 "대 오스트리아 합중국"
-AUP_united_states_national_populist:0 "대 오스트리아 합중국"
-AUP_united_states_national_populist_ADJ:0 "오스트리아"
-AUP_united_states_national_populist_DEF:0 "대 오스트리아 합중국"
-AUP_united_states_paternal_autocrat:0 "대 오스트리아 합중국"
-AUP_united_states_paternal_autocrat_ADJ:0 "오스트리아"
-AUP_united_states_paternal_autocrat_DEF:0 "대 오스트리아 합중국"
-AUP_united_states_radical_socialist:0 "대 오스트리아 합중국"
-AUP_united_states_radical_socialist_ADJ:0 "오스트리아"
-AUP_united_states_radical_socialist_DEF:0 "대 오스트리아 합중국"
-AUP_united_states_social_conservative:0 "대 오스트리아 합중국"
-AUP_united_states_social_conservative_ADJ:0 "오스트리아"
-AUP_united_states_social_conservative_DEF:0 "대 오스트리아 합중국"
-AUP_united_states_social_democrat:0 "대 오스트리아 합중국"
-AUP_united_states_social_democrat_ADJ:0 "오스트리아"
-AUP_united_states_social_democrat_DEF:0 "대 오스트리아 합중국"
-AUP_united_states_social_liberal:0 "대 오스트리아 합중국"
-AUP_united_states_social_liberal_ADJ:0 "오스트리아"
-AUP_united_states_social_liberal_DEF:0 "대 오스트리아 합중국"
-AUP_united_states_authoritarian_democrat:0 "대 오스트리아 합중국"
-AUP_united_states_authoritarian_democrat_ADJ:0 "오스트리아"
-AUP_united_states_authoritarian_democrat_DEF:0 "대 오스트리아 합중국"
-AUP_united_states_totalist:0 "대 오스트리아 합중국"
-AUP_united_states_totalist_ADJ:0 "오스트리아"
-AUP_united_states_totalist_DEF:0 "대 오스트리아 합중국"
+AUS_united_states_market_liberal:0 "대 오스트리아 합중국"
+AUS_united_states_market_liberal_ADJ:0 "오스트리아"
+AUS_united_states_market_liberal_DEF:0 "대 오스트리아 합중국"
+AUS_united_states_national_populist:0 "대 오스트리아 합중국"
+AUS_united_states_national_populist_ADJ:0 "오스트리아"
+AUS_united_states_national_populist_DEF:0 "대 오스트리아 합중국"
+AUS_united_states_paternal_autocrat:0 "대 오스트리아 합중국"
+AUS_united_states_paternal_autocrat_ADJ:0 "오스트리아"
+AUS_united_states_paternal_autocrat_DEF:0 "대 오스트리아 합중국"
+AUS_united_states_radical_socialist:0 "대 오스트리아 합중국"
+AUS_united_states_radical_socialist_ADJ:0 "오스트리아"
+AUS_united_states_radical_socialist_DEF:0 "대 오스트리아 합중국"
+AUS_united_states_social_conservative:0 "대 오스트리아 합중국"
+AUS_united_states_social_conservative_ADJ:0 "오스트리아"
+AUS_united_states_social_conservative_DEF:0 "대 오스트리아 합중국"
+AUS_united_states_social_democrat:0 "대 오스트리아 합중국"
+AUS_united_states_social_democrat_ADJ:0 "오스트리아"
+AUS_united_states_social_democrat_DEF:0 "대 오스트리아 합중국"
+AUS_united_states_social_liberal:0 "대 오스트리아 합중국"
+AUS_united_states_social_liberal_ADJ:0 "오스트리아"
+AUS_united_states_social_liberal_DEF:0 "대 오스트리아 합중국"
+AUS_united_states_authoritarian_democrat:0 "대 오스트리아 합중국"
+AUS_united_states_authoritarian_democrat_ADJ:0 "오스트리아"
+AUS_united_states_authoritarian_democrat_DEF:0 "대 오스트리아 합중국"
+AUS_united_states_totalist:0 "대 오스트리아 합중국"
+AUS_united_states_totalist_ADJ:0 "오스트리아"
+AUS_united_states_totalist_DEF:0 "대 오스트리아 합중국"
 
 HUN_TRANS_market_liberal:0 "성 이슈트반 왕관령 오스트리아"
 HUN_TRANS_market_liberal_ADJ:0 "헝가리"
@@ -3554,6 +3551,37 @@ EMI_PAR_national_populist:0 "파르마"
 EMI_PAR_national_populist_ADJ:0 "파르마"
 EMI_PAR_national_populist_DEF:0 "파르마"
 
+MEE_totalist:0 "멕시코"
+MEE_totalist_ADJ:0 "멕시코"
+MEE_totalist_DEF:0 "멕시코"
+MEE_syndicalist:0 "멕시코"
+MEE_syndicalist_ADJ:0 "멕시코"
+MEE_syndicalist_DEF:0 "멕시코"
+MEE_radical_socialist:0 "멕시코"
+MEE_radical_socialist_ADJ:0 "멕시코"
+MEE_radical_socialist_DEF:0 "멕시코"
+MEE_social_democrat:0 "멕시코 제국"
+MEE_social_democrat_ADJ:0 "멕시코"
+MEE_social_democrat_DEF:0 "멕시코 제국"
+MEE_social_liberal:0 "멕시코 제국"
+MEE_social_liberal_ADJ:0 "멕시코"
+MEE_social_liberal_DEF:0 "멕시코 제국"
+MEE_market_liberal:0 "멕시코 제국"
+MEE_market_liberal_ADJ:0 "멕시코"
+MEE_market_liberal_DEF:0 "멕시코 제국"
+MEE_social_conservative:0 "멕시코 제국"
+MEE_social_conservative_ADJ:0 "멕시코"
+MEE_social_conservative_DEF:0 "멕시코 제국"
+MEE_authoritarian_democrat:0 "멕시코 제국"
+MEE_authoritarian_democrat_ADJ:0 "멕시코"
+MEE_authoritarian_democrat_DEF:0 "멕시코 제국"
+MEE_paternal_autocrat:0 "멕시코 제국"
+MEE_paternal_autocrat_ADJ:0 "멕시코"
+MEE_paternal_autocrat_DEF:0 "멕시코 제국"
+MEE_national_populist:0 "멕시코 제국"
+MEE_national_populist_ADJ:0 "멕시코"
+MEE_national_populist_DEF:0 "멕시코 제국"
+
 ##############
 #Vanilla
 ##############
@@ -3939,3 +3967,159 @@ EGYK_paternal_autocrat_DEF:0 "이집트 케디브국"
 EGYK_national_populist:0 "이집트 케디브국"
 EGYK_national_populist_ADJ:0 "이집트"
 EGYK_national_populist_DEF:0 "이집트 케디브국"
+
+
+IRA_totalist:0 "이란 사회주의 공화국
+IRA_totalist_ADJ:0 "이란"
+IRA_totalist_DEF:0 "이란 사회주의 공화국
+IRA_syndicalist:0 "이란 사회주의 공화국
+IRA_syndicalist_ADJ:0 "이란"
+IRA_syndicalist_DEF:0 "이란 사회주의 공화국
+IRA_radical_socialist:0 "이란 사회주의 공화국
+IRA_radical_socialist_ADJ:0 "이란"
+IRA_radical_socialist_DEF:0 "이란 사회주의 공화국
+IRA_social_democrat:0 "이란"
+IRA_social_democrat_ADJ:0 "이란"
+IRA_social_democrat_DEF:0 "이란"
+IRA_social_liberal:0 "이란"
+IRA_social_liberal_ADJ:0 "이란"
+IRA_social_liberal_DEF:0 "이란"
+IRA_market_liberal:0 "이란"
+IRA_market_liberal_ADJ:0 "이란"
+IRA_market_liberal_DEF:0 "이란"
+IRA_social_conservative:0 "이란"
+IRA_social_conservative_ADJ:0 "이란"
+IRA_social_conservative_DEF:0 "이란"
+IRA_authoritarian_democrat:0 "이란"
+IRA_authoritarian_democrat_ADJ:0 "이란"
+IRA_authoritarian_democrat_DEF:0 "이란"
+IRA_paternal_autocrat:0 "이란"
+IRA_paternal_autocrat_ADJ:0 "이란"
+IRA_paternal_autocrat_DEF:0 "이란"
+IRA_national_populist:0 "이란"
+IRA_national_populist_ADJ:0 "이란"
+IRA_national_populist_DEF:0 "이란"
+
+CAL_totalist:0 "미 태평양합중국"
+CAL_totalist_ADJ:0 "태평양"
+CAL_totalist_DEF:0 "미 태평양합중국"
+CAL_syndicalist:0 "미 태평양합중국"
+CAL_syndicalist_ADJ:0 "태평양"
+CAL_syndicalist_DEF:0 "미 태평양합중국"
+CAL_radical_socialist:0 "미 태평양합중국"
+CAL_radical_socialist_ADJ:0 "태평양"
+CAL_radical_socialist_DEF:0 "미 태평양합중국"
+CAL_social_democrat:0 "미 태평양합중국"
+CAL_social_democrat_ADJ:0 "태평양"
+CAL_social_democrat_DEF:0 "미 태평양합중국"
+CAL_social_liberal:0 "미 태평양합중국"
+CAL_social_liberal_ADJ:0 "태평양"
+CAL_social_liberal_DEF:0 "미 태평양합중국"
+CAL_market_liberal:0 "미 태평양합중국"
+CAL_market_liberal_ADJ:0 "태평양"
+CAL_market_liberal_DEF:0 "미 태평양합중국"
+CAL_social_conservative:0 "미 태평양합중국"
+CAL_social_conservative_ADJ:0 "태평양"
+CAL_social_conservative_DEF:0 "미 태평양합중국"
+CAL_authoritarian_democrat:0 "미 태평양합중국"
+CAL_authoritarian_democrat_ADJ:0 "태평양"
+CAL_authoritarian_democrat_DEF:0 "미 태평양합중국"
+CAL_paternal_autocrat:0 "미 태평양합중국"
+CAL_paternal_autocrat_ADJ:0 "태평양"
+CAL_paternal_autocrat_DEF:0 "미 태평양합중국"
+CAL_national_populist:0 "미 태평양합중국"
+CAL_national_populist_ADJ:0 "태평양"
+CAL_national_populist_DEF:0 "미 태평양합중국"
+
+CSA_ACW_totalist:0 "미 노동 연맹"
+CSA_ACW_totalist_ADJ:0 "생디칼"
+CSA_ACW_totalist_DEF:0 "미 노동 연맹"
+CSA_ACW_syndicalist:0 "미 노동 연맹"
+CSA_ACW_syndicalist_ADJ:0 "생디칼"
+CSA_ACW_syndicalist_DEF:0 "미 노동 연맹"
+CSA_ACW_radical_socialist:0 "미 노동 연맹"
+CSA_ACW_radical_socialist_ADJ:0 "생디칼"
+CSA_ACW_radical_socialist_DEF:0 "미 노동 연맹"
+CSA_ACW_social_democrat:0 "미합중국"
+CSA_ACW_social_democrat_ADJ:0 "생디칼"
+CSA_ACW_social_democrat_DEF:0 "미합중국"
+CSA_ACW_social_liberal:0 "미합중국"
+CSA_ACW_social_liberal_ADJ:0 "미국"
+CSA_ACW_social_liberal_DEF:0 "미합중국"
+CSA_ACW_market_liberal:0 "미합중국"
+CSA_ACW_market_liberal_ADJ:0 "미국"
+CSA_ACW_market_liberal_DEF:0 "미합중국"
+CSA_ACW_social_conservative:0 "미합중국"
+CSA_ACW_social_conservative_ADJ:0 "미국"
+CSA_ACW_social_conservative_DEF:0 "미합중국"
+CSA_ACW_authoritarian_democrat:0 "미합중국"
+CSA_ACW_authoritarian_democrat_ADJ:0 "미국"
+CSA_ACW_authoritarian_democrat_DEF:0 "미합중국"
+CSA_ACW_paternal_autocrat:0 "미합중국"
+CSA_ACW_paternal_autocrat_ADJ:0 "미국"
+CSA_ACW_paternal_autocrat_DEF:0 "미합중국"
+CSA_ACW_national_populist:0 "미주연합"
+CSA_ACW_national_populist_ADJ:0 "연합"
+CSA_ACW_national_populist_DEF:0 "미주연합"
+
+TEX_ACW_totalist:0 "미 노동 연맹"
+TEX_ACW_totalist_ADJ:0 "생디칼"
+TEX_ACW_totalist_DEF:0 "미 노동 연맹"
+TEX_ACW_syndicalist:0 "미 노동 연맹"
+TEX_ACW_syndicalist_ADJ:0 "생디칼"
+TEX_ACW_syndicalist_DEF:0 "미 노동 연맹"
+TEX_ACW_radical_socialist:0 "미 노동 연맹"
+TEX_ACW_radical_socialist_ADJ:0 "생디칼"
+TEX_ACW_radical_socialist_DEF:0 "미 노동 연맹"
+TEX_ACW_social_democrat:0 "미주연합"
+TEX_ACW_social_democrat_ADJ:0 "연합"
+TEX_ACW_social_democrat_DEF:0 "미주연합"
+TEX_ACW_social_liberal:0 "미주연합"
+TEX_ACW_social_liberal_ADJ:0 "연합"
+TEX_ACW_social_liberal_DEF:0 "미주연합"
+TEX_ACW_market_liberal:0 "미주연합"
+TEX_ACW_market_liberal_ADJ:0 "연합"
+TEX_ACW_market_liberal_DEF:0 "미주연합"
+TEX_ACW_social_conservative:0 "미주연합"
+TEX_ACW_social_conservative_ADJ:0 "연합"
+TEX_ACW_social_conservative_DEF:0 "미주연합"
+TEX_ACW_authoritarian_democrat:0 "미주연합"
+TEX_ACW_authoritarian_democrat_ADJ:0 "연합"
+TEX_ACW_authoritarian_democrat_DEF:0 "미주연합"
+TEX_ACW_paternal_autocrat:0 "미주연합"
+TEX_ACW_paternal_autocrat_ADJ:0 "연합"
+TEX_ACW_paternal_autocrat_DEF:0 "미주연합"
+TEX_ACW_national_populist:0 "미주연합"
+TEX_ACW_national_populist_ADJ:0 "연합"
+TEX_ACW_national_populist_DEF:0 "미주연합"
+
+USA_ACW_totalist:0 "미합중국"
+USA_ACW_totalist_ADJ:0 "연방"
+USA_ACW_totalist_DEF:0 "미합중국"
+USA_ACW_syndicalist:0 "미합중국"
+USA_ACW_syndicalist_ADJ:0 "연방"
+USA_ACW_syndicalist_DEF:0 "미합중국"
+USA_ACW_radical_socialist:0 "미합중국"
+USA_ACW_radical_socialist_ADJ:0 "연방"
+USA_ACW_radical_socialist_DEF:0 "미합중국"
+USA_ACW_social_democrat:0 "미합중국"
+USA_ACW_social_democrat_ADJ:0 "연방"
+USA_ACW_social_democrat_DEF:0 "미합중국"
+USA_ACW_social_liberal:0 "미합중국"
+USA_ACW_social_liberal_ADJ:0 "연방"
+USA_ACW_social_liberal_DEF:0 "미합중국"
+USA_ACW_market_liberal:0 "미합중국"
+USA_ACW_market_liberal_ADJ:0 "연방"
+USA_ACW_market_liberal_DEF:0 "미합중국"
+USA_ACW_social_conservative:0 "미합중국"
+USA_ACW_social_conservative_ADJ:0 "연방"
+USA_ACW_social_conservative_DEF:0 "미합중국"
+USA_ACW_authoritarian_democrat:0 "미합중국"
+USA_ACW_authoritarian_democrat_ADJ:0 "연방"
+USA_ACW_authoritarian_democrat_DEF:0 "미합중국"
+USA_ACW_paternal_autocrat:0 "미합중국"
+USA_ACW_paternal_autocrat_ADJ:0 "연방"
+USA_ACW_paternal_autocrat_DEF:0 "미합중국"
+USA_ACW_national_populist:0 "미합중국"
+USA_ACW_national_populist_ADJ:0 "연방"
+USA_ACW_national_populist_DEF:0 "미합중국"
