--- a/Kaiserreich Korean Translation/localisation/KR_Countries_Cosmetic_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Countries_Cosmetic_l_english.yml
@@ -4031,15 +4031,15 @@ CAL_national_populist:0 "미 태평양합중국"
 CAL_national_populist_ADJ:0 "태평양"
 CAL_national_populist_DEF:0 "미 태평양합중국"
 
-CSA_ACW_totalist:0 "미 노동 연맹"
+CSA_ACW_totalist:0 "아메리카 노동연맹"
 CSA_ACW_totalist_ADJ:0 "생디칼"
-CSA_ACW_totalist_DEF:0 "미 노동 연맹"
-CSA_ACW_syndicalist:0 "미 노동 연맹"
+CSA_ACW_totalist_DEF:0 "아메리카"
+CSA_ACW_syndicalist:0 "아메리카 노동연맹"
 CSA_ACW_syndicalist_ADJ:0 "생디칼"
-CSA_ACW_syndicalist_DEF:0 "미 노동 연맹"
-CSA_ACW_radical_socialist:0 "미 노동 연맹"
+CSA_ACW_syndicalist_DEF:0 "아메리카 노동연맹"
+CSA_ACW_radical_socialist:0 "아메리카 노동연맹"
 CSA_ACW_radical_socialist_ADJ:0 "생디칼"
-CSA_ACW_radical_socialist_DEF:0 "미 노동 연맹"
+CSA_ACW_radical_socialist_DEF:0 "아메리카 노동연맹"
 CSA_ACW_social_democrat:0 "미합중국"
 CSA_ACW_social_democrat_ADJ:0 "생디칼"
 CSA_ACW_social_democrat_DEF:0 "미합중국"
@@ -4062,15 +4062,15 @@ CSA_ACW_national_populist:0 "미주연합"
 CSA_ACW_national_populist_ADJ:0 "연합"
 CSA_ACW_national_populist_DEF:0 "미주연합"
 
-TEX_ACW_totalist:0 "미 노동 연맹"
+TEX_ACW_totalist:0 "아메리카 노동연맹"
 TEX_ACW_totalist_ADJ:0 "생디칼"
-TEX_ACW_totalist_DEF:0 "미 노동 연맹"
-TEX_ACW_syndicalist:0 "미 노동 연맹"
+TEX_ACW_totalist_DEF:0 "아메리카 노동연맹"
+TEX_ACW_syndicalist:0 "아메리카 노동연맹"
 TEX_ACW_syndicalist_ADJ:0 "생디칼"
-TEX_ACW_syndicalist_DEF:0 "미 노동 연맹"
-TEX_ACW_radical_socialist:0 "미 노동 연맹"
+TEX_ACW_syndicalist_DEF:0 "아메리카 노동연맹"
+TEX_ACW_radical_socialist:0 "아메리카 노동연맹"
 TEX_ACW_radical_socialist_ADJ:0 "생디칼"
-TEX_ACW_radical_socialist_DEF:0 "미 노동 연맹"
+TEX_ACW_radical_socialist_DEF:0 "아메리카 노동연맹"
 TEX_ACW_social_democrat:0 "미주연합"
 TEX_ACW_social_democrat_ADJ:0 "연합"
 TEX_ACW_social_democrat_DEF:0 "미주연합"
