--- a/Kaiserreich Korean Translation/localisation/KR_Dutch_East_Indies_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Dutch_East_Indies_l_english.yml
@@ -811,7 +811,7 @@ holex_informants:0 "Informants"
 
 ### Decision categories ###
 HOLEX_exiles_resistance_category:0 "Resistance Actions"
-HOLEX_exiles_resistance_category_desc:0 "The Office of Special Assignments centrally directs the resistance actions against the tyranny of our homeland's current government by her majesty's loyalists on the ground in the Netherlands.\n\nAvailable Resistance Members: [?DEI.holex_active_resistance_members|-0]\n\nFree Hiding Spots: [?DEI.holex_free_hiding_spots|-0]\n\nHidden Resistance Members: [?DEI.holex_hiding_resistancemembers|-0]"
+HOLEX_exiles_resistance_category_desc:0 "The Office of Special Assignments centrally directs the resistance actions against the tyranny of our homeland's current government by her majesty's loyalists on the ground in the Netherlands.\n\nAvailable Resistance Members: [?DEI.holex_active_resistance_members|-0]\n\nFree Hiding Spots: [?DEI.holex_free_hiding_spots|-0]\n\nHidden Resistance Members: [?DEI.holex_hiding_resistance members|-0]"
 HOLEX_syndies_counterresistance_category:0 "Counterresistance Actions"
 HOLEX_syndies_counterresistance_category_desc:0 "The Secretariat for Revolutionary Safeguard, or Sereve as it's also known, is the main internal intelligence agency of the Batavian Commune. Since the exiles are organizing a resistance in our country, they are responsible for cracking down on these reactionaries.\n\nInformants: [?DEI.holex_informants|-0]"
 
