--- a/Kaiserreich Korean Translation/localisation/KR_Equipment_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Equipment_l_english.yml
@@ -477,6 +477,9 @@ infantry_equipment_3:0 "보병 장비 III"
 infantry_equipment_3_short:0 "화기 III"
 infantry_equipment_3_desc:0 "개인과 승무원들에게 지급되는 보병화기로 군인에게 필요로 하는 다양한 소도구들을 포함하고 있습니다. 게다가 현대화된 개인 돌격소총과 대전차 로켓을 포함하고 있습니다."
 
+###Just gonna stick this here
+mot_rockets:0 "차량화 로켓 야포"
+
 ##################################
 ### Country Specific Equipment ###
 ##################################
@@ -1684,8 +1687,8 @@ CAL_heavy_tank_artillery_equipment_3_short:0 "T92 HMC"
 
 CAL_super_heavy_tank_equipment_1:0 "T95 Super Heavy Tank"
 CAL_super_heavy_tank_equipment_1_short:0 "T95"
-CAL_modern_tank_equipment_1:0 "M46 Patton"
-CAL_modern_tank_equipment_1_short:0 "Patton"
+CAL_modern_tank_equipment_1:0 "M46 마샬"
+CAL_modern_tank_equipment_1_short:0 "마샬"
 
 ###
 ### Dominion of Canada ###
@@ -1878,16 +1881,16 @@ CHI_EQUIPMENT_VERSION_16:0 "P"
 
 ### Land ###
 CHI_infantry_equipment_0:0 "Guangdong Type 88"
-CHI_infantry_equipment_0_short:0 "Guangdong Type 88"
+CHI_infantry_equipment_0_short:0 "Type 88"
 CHI_infantry_equipment_0_desc:0 "Originally a product of late Guangxu era 'Self Strengthening' efforts, the Type 88 was designed as a close copy of the German Gewehr 88 with export modifications. While collectively inferior to newer rifles despite improvements, and often poorly maintained, the weapon is known to be rugged and reliable if unwieldy.\n\nThis variety is mainly produced at the Guangdong Arsenal, though equipment shortages and personal preference often see it used alongside non-standard weapons such as the Daodao."
-CHI_infantry_equipment_1:0 "Type 26"
-CHI_infantry_equipment_1_short:0 "Guangdong Type 27"
+CHI_infantry_equipment_1:0 "Guangdong Type 27"
+CHI_infantry_equipment_1_short:0 "Type 27"
 CHI_infantry_equipment_1_desc:0 "Originally called the 'Xuantong Type 27', this rifle was put into Qing service in 1935 through German assistance after the Restoration. The weapon is functionally a near copy of the German Mauser M1924, and a considerable improvement over the much older Type 88 in terms of weight and recoil.\n\nFirst produced at the Hanyang arsenal with German tools, manufacturing methods have already spread to Guangdong, though it may not fully replace its predecessors for some time."
 CHI_infantry_equipment_2:0 "Tsingtao MP18"
-CHI_infantry_equipment_2_short:0 "Tsingtao MP18"
+CHI_infantry_equipment_2_short:0 "MP18"
 CHI_infantry_equipment_2_desc:0 "Thanks to the flood of Weltkrieg surplus into the world market in the early 1920s, the MP18 saw action in China some time before a modified version began production in Tsingtao.\n\nWith changes to the magazine and stock, this particular product of Sino-German cooperation has been copied and sold throughout Northern and Southern China, though primarily to the Qing Government."
 CHI_infantry_equipment_3:0 "Liu Type 2"
-CHI_infantry_equipment_3_short:0 "Liu Type 2"
+CHI_infantry_equipment_3_short:0 "Type 2"
 CHI_infantry_equipment_3_desc:0 "The General Liu Rifle, originally produced in small quantities in 1916, represented China's first independent foray into modern arms design, but unfortunately never made its way into full-scale production due to the death of its designer.\n\nThe weapon itself was by most accounts impressive for its time, and the superintendant at the Hanyang Arsenal has proposed that its design might be updated and issued as the 'Liu Type 2'."
 
 CHI_anti_tank_equipment_1:0 "37 mm Type 14"
@@ -2260,10 +2263,10 @@ CSA_heavy_tank_equipment_3_short:0 "Pershing"
 CSA_heavy_tank_artillery_equipment_3:0 "T92 Howitzer Motor Carriage"
 CSA_heavy_tank_artillery_equipment_3_short:0 "T92 HMC"
 
-CSA_super_heavy_tank_equipment_1:0 "T95 Super Heavy Tank"
+CSA_super_heavy_tank_equipment_1:0 "T95 초중전차"
 CSA_super_heavy_tank_equipment_1_short:0 "T95"
-CSA_modern_tank_equipment_1:0 "M46 Patton"
-CSA_modern_tank_equipment_1_short:0 "Patton"
+CSA_modern_tank_equipment_1:0 "M46 버틀러"
+CSA_modern_tank_equipment_1_short:0 "버틀러"
 
 ###
 ### Cuba ###
@@ -4510,8 +4513,8 @@ HAW_heavy_tank_artillery_equipment_3_short:0 "T92 HMC"
 
 HAW_super_heavy_tank_equipment_1:0 "T95 Super Heavy Tank"
 HAW_super_heavy_tank_equipment_1_short:0 "T95"
-HAW_modern_tank_equipment_1:0 "M46 Patton"
-HAW_modern_tank_equipment_1_short:0 "Patton"
+HAW_modern_tank_equipment_1:0 "M46 맥너니"
+HAW_modern_tank_equipment_1_short:0 "맥너니"
 
 ###
 ### Netherlands ###
@@ -7361,6 +7364,25 @@ SIE_gw_tank_equipment:0 "Renault FT"
 SIE_gw_tank_equipment_short:0 "FT"
 
 ###
+### SIK - Uyghurstan ###
+###
+
+### Land ###
+SIK_infantry_equipment_0:0 "Kunming Type 88"
+SIK_infantry_equipment_0_short:0 "Kunming Type 88"
+SIK_infantry_equipment_0_desc:0 "Originally a product of late Guangxu era 'Self Strengthening' efforts, the Type 88 was designed as a close copy of the German Gewehr 88 with export modifications. While collectively inferior to newer rifles despite improvements, and often poorly maintained, the weapon is known to be rugged and reliable if unweildy.\n\nThis variety is mainly produced at the Xining Arsenal in Qinghai, though equipment shortages and personal preference often see it used alongside non-standard weapons such as the Daodao."
+SIK_infantry_equipment_1:0 "Kunming Type 27"
+SIK_infantry_equipment_1_short:0 "Kunming Type 27"
+SIK_infantry_equipment_1_desc:0 "Originally called the 'Xuantong Type 27', this rifle was put into Qing service in 1935 through German assistance after the Restoration. The weapon is functionally a near copy of the German Mauser M1924, and a considerable improvement over the much older Type 88 in terms of weight and recoil.\n\nFirst produced at the Hanyang arsenal with German tools, manufacturing methods have already spread to Xining, though it may not fully replace its predecessors for some time."
+SIK_infantry_equipment_2:0 "Tsingtao MP18"
+SIK_infantry_equipment_2_short:0 "Tsingtao MP18"
+SIK_infantry_equipment_2_desc:0 "Thanks to the flood of Weltkrieg surplus into the world market in the early 1920s, the MP18 saw action in China some time before a modified version began production in Tsingtao.\n\nWith changes to the magazine and stock, this particular product of Sino-German cooperation has been copied and sold throughout Northern and Southern China, though primarily to the Qing Government."
+SIK_infantry_equipment_3:0 "Liu Type 2"
+SIK_infantry_equipment_3_short:0 "Liu Type 2"
+SIK_infantry_equipment_3_desc:0 "The General Liu Rifle, originally produced in small quantities in 1916, represented China's first independent foray into modern arms design, but unfortunately never made its way into full-scale production due to the death of its designer.\n\nThe weapon itself was by most accounts impressive for its time, and the superintendant at the Xining Arsenal has proposed that its design might be updated and issued as the 'Liu Type 2'."
+
+
+###
 ### Slovenia ###
 ###
 
@@ -7705,8 +7727,8 @@ SPR_light_tank_equipment_3_desc:0 "The Type 1941 was the most successful design 
 SQI_infantry_equipment_0:0 "Taiyuan Type 6-5"
 SQI_infantry_equipment_0_short:0 "Taiyuan Type 6-5"
 SQI_infantry_equipment_0_desc:0 "The Type 6-5, named for its use of 6.5mm rounds, is a slightly modified copy of the Japanese Type 38 Arisaka originally produced by Yan Xishan's Taiyuan Arsenal.\n\nShanqing forces have since put the weapon to widespread use, though they lack Yan's more cordial relations with the Japanese and Fengtian Governments, and thus ammo is harder to come by. This factor, and personal preference, have seen it used alongside a variety of other weapons such as the Daodao."
-SQI_infantry_equipment_1:0 "Taiyuan Type 26"
-SQI_infantry_equipment_1_short:0 "Taiyuan Type 26"
+SQI_infantry_equipment_1:0 "Taiyuan Type 27"
+SQI_infantry_equipment_1_short:0 "Taiyuan Type 27"
 SQI_infantry_equipment_1_desc:0 "Originally called the 'Xuantong Type 27', this rifle was put into Qing service in 1935 through German assistance after the Restoration. The weapon is functionally a near copy of the German Mauser M1924, and a considerable improvement over the much older Type 88 in terms of weight and recoil.\n\nFirst produced at the Hanyang arsenal with German tools, manufacturing methods have already spread to Taiyuan, though it may not fully replace its predecessors for some time."
 SQI_infantry_equipment_2:0 "Tsingtao MP18"
 SQI_infantry_equipment_2_short:0 "Tsingtao MP18"
@@ -8077,6 +8099,20 @@ SWI_support_weapons3:0 "Solothurn S2-200 & 81mm Mw33/38"
 SYR_infantry_equipment_0:0 "Mauser G98 M1903"
 SYR_infantry_equipment_0_short:0 "Mauser G98"
 SYR_infantry_equipment_0_desc:0 "Mauser G98 was the main service rifle of the Ottoman Army during the Weltkrieg. The Ottoman M1903, chambered in 7.65mm, was the most common variant of Mauser in use. Pronounced 'Mavzer' by the Ottomans, this iconic rifle achieved great fame and became deeply ingrained in the Turkish subconscious.\n'One side of me withered from sorrows / the other from a Mavzer wound'. Freed from Ottoman control, the Mashriqi army possess a large number of these rifles."
+
+###
+### Tuva ###
+###
+
+### Land ###
+TAN_infantry_equipment_0:0 "Vintovka Mosina 1891 obr.1891"
+TAN_infantry_equipment_0_short:0 "Mosina 1891"
+TAN_infantry_equipment_1:0 "Vintovka Mosina 1891 obr.1891/1930"
+TAN_infantry_equipment_1_short:0 "Mosina 1891/1930"
+TAN_infantry_equipment_2:0 "PPSh-41"
+TAN_infantry_equipment_2_short:0 "PPSh-41"
+TAN_infantry_equipment_3:0 "Sudarev obr.1942"
+TAN_infantry_equipment_3_short:0 "AS-42"
 
 ###
 ### Union State ###
@@ -8648,10 +8684,10 @@ USA_heavy_tank_equipment_3_short:0 "Pershing"
 USA_heavy_tank_artillery_equipment_3:0 "T92 Howitzer Motor Carriage"
 USA_heavy_tank_artillery_equipment_3_short:0 "T92 HMC"
 
-USA_super_heavy_tank_equipment_1:0 "T95 Super Heavy Tank"
+USA_super_heavy_tank_equipment_1:0 "T95 초중전차"
 USA_super_heavy_tank_equipment_1_short:0 "T95"
-USA_modern_tank_equipment_1:0 "M46 Patton"
-USA_modern_tank_equipment_1_short:0 "Patton"
+USA_modern_tank_equipment_1:0 "M46 브래들리"
+USA_modern_tank_equipment_1_short:0 "브래들리"
 
 ###
 ### Namibland ###
