--- a/Kaiserreich Korean Translation/localisation/KR_Ethiopia_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Ethiopia_l_english.yml
@@ -349,8 +349,8 @@ ethiopia.21.t:0 "Power to the council"
 ethiopia.21.d:0 "It is time for the council of nobles to seize full control of the government from Selassie's goons as, from now on, he will be ruling as a King among Kings, remaining a weak figurehead for the council to rally behind, if and when he is needed."
 ethiopia.21.a:0 "Praise the council"
 ethiopia.22.t:0 "Eritrean Revolt!"
-ethiopia.22.d:0 "The people of Eritrea have had enough of being taxed to oblivion, and with the tribal leaders and army officers remaining unintegrated, Eritrean nationalists have managed to organise a revolt against our rule. We must begin swift moblisation in order to put them down and ensure stability!"
-ethiopia.22.a:0 "Crush Them!"
+ethiopia.22.d:0 "The people of Eritrea have had enough of being taxed to oblivion, and with the tribal leaders and army officers remaining unintegrated, Eritrean nationalists have managed to organise a revolt against our rule during this desperate time of war. We must begin swift moblisation in order to put them down and ensure stability!"
+ethiopia.22.a:0 "Damned backstabbers!"
 ethiopia.23.t:0 "Victory over Somalia"
 ethiopia.23.d:0 "We have finally crushed the Somalis in war and now it is time to choose: Shall we install a friendly regime in Somalia or simply occupy the entire country?"
 ethiopia.23.a:0 "Install a friendly regime"
