--- a/Kaiserreich Korean Translation/localisation/KR_Flanders_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Flanders_l_english.yml
@@ -448,7 +448,7 @@ FLN_Join_Phalanstere_Program_desc:0 "The Commune of France has organised a revol
 FLN_Netherlands_United:0 "United Netherlands"
 FLN_Netherlands_United_desc:0 "Our nation has drawn ever closer to our linguistic brothers to the north. The process of political and economic integration, however, is sure to be slow, so let's get to it."
 FLN_Transitional_Government:0 "Transitional Government"
-FLN_Transitional_Government_desc:0 ""
+FLN_Transitional_Government_desc:0 "To guide the process, we should appoint a transitional government and reach over the party lines to strive for a succesful integration for everyone."
 FLN_Attachement_To_The_Netherlans:0 "The Dutch Attachment"
 FLN_Attachement_To_The_Netherlans_desc:0 ""
 FLN_Language_Congress_Of_Leuven:0 "Hold the Leuven Language Congress"
@@ -475,19 +475,19 @@ FLN_Seperate_Flemish_Parties:0 "Separate Flemish Parties"
 FLN_Seperate_Flemish_Parties_desc:0 ""
 
 FLN_Economic_Transition:0 "Economic Cooperation"
-FLN_Economic_Transition_desc:0 ""
+FLN_Economic_Transition_desc:0 "Plans for a thorough economic cooperation system date back to the 1820s when King Willem of the Netherlands still fostered plans to use Belgium as his manufacturing base whilst the Dutch ports would ship the products out. With our renewed union, the time has come to mend the broken relations and foster the integration of both economies into a unified system."
 FLN_Expand_Maastricht_Limburg_Corridor:0 "Expand the Maastricht-Hasselt Axis"
-FLN_Expand_Maastricht_Limburg_Corridor_desc:0 ""
+FLN_Expand_Maastricht_Limburg_Corridor_desc:0 "Limburg on both sides of the old national borders has always been a neglected part of our nations and although a strong connection between the Limbourgish people of Flemish and Dutch Limburg kept the region somewhat united, the infrastructure and industry of the region were left far behind that of other provinces. The loss of the Walloon mines has now prompted us to focus on this province and to bring the outdated region up to speed with the rest of the nation."
 FLN_Deepen_The_Westerschelde:0 "Deepen the Westerschelde"
-FLN_Deepen_The_Westerschelde_desc:0 ""
+FLN_Deepen_The_Westerschelde_desc:0 "The Westerschelde is the lifeblood of the Flemish economy as its main export harbours, those of Gent and Antwerpen rely on its connection to the North Sea. Requests to deepen the Westerschelde and as such allow larger ships to enter have been denied as the harbour of Rotterdam, the largest competitor of Antwerpen, and as such the Dutch government saw its expansion as a threat to their economy. As the borders are now lifted, the Dutch have finally agreed."
 FLN_Unified_Dutch_Currency:0 "Unified Dutch Currency"
-FLN_Unified_Dutch_Currency_desc:0 ""
+FLN_Unified_Dutch_Currency_desc:0 "Currently the Mark and the Gulden are used intertwined in Flanders as the rushed union with the Netherlands and the Black Monday crash has left the Flemish economy in the dumpster and without clear regulation. To ameliorate the issue, the ministry of financial affairs has agreed with Dutch demands to fully embrace the Gulden."
 FLN_Shell_In_Antwerpian_Harbour:0 "Shell in Antwerp Harbour"
-FLN_Shell_In_Antwerpian_Harbour_desc:0 ""
+FLN_Shell_In_Antwerpian_Harbour_desc:0 "Lacking domestic oil production yet having a high need for the black gold, refineries in the harbours of Antwerpen and Gent have long attempted to keep as much of the oil industry domestically, only importing the raw material. As German companies are in shambles and with the importance worldwide of Shell, the city of Antwerpen has offered a concession to the company in the hopes of securing a reliable connection to the oil fields and reduce dependence on Dutch ports."
 FLN_Development_Of_Zeeuws_Vlaanderen:0 "Development of Zeeuws-Vlaanderen"
-FLN_Development_Of_Zeeuws_Vlaanderen_desc:0 ""
+FLN_Development_Of_Zeeuws_Vlaanderen_desc:0 "Zeeuws-Vlaanderen is a curious little province within the Dutch nation. Although it is predominantely inhabited by people sharing our Flemish culture, it refused to join Belgium in 1830 and has slowely created its own identity. Nonetheless one cannot deny that people from Zeeuws-Vlaanderen often work, live and shop in our lands and that one of the main economic hubs of the region, Terneuzen, is almost entirely dependent on the harbour of Gent."
 FLN_Flemish_Dutch_Scientific_Cooperation:0 "Flemish-Dutch Scientific Cooperation"
-FLN_Flemish_Dutch_Scientific_Cooperation_desc:0 ""
+FLN_Flemish_Dutch_Scientific_Cooperation_desc:0 "As we are now one nation, it is only reasonable that we pool our intelectual strength and improve our standing in the global scientific community."
 
 FLN_Regency_By_The_Flemish_Council:0 "Regency by the Flemish Council"
 FLN_Regency_By_The_Flemish_Council_desc:0 "The Flemish Council has established itself as the only legitimate form of government and quelled the radical ideas of the resistance. They are however meant to act solely as an advising organ to a King, a position that currently remains vacant."
